column variation and balck bg card icon alignment fixed

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -150,6 +150,13 @@
 
 .cards.black-bg .cards-dark-theme .cards-card-image {
   line-height: 0;
+  width: 25%;
+  height: 35%;
+  border-radius: 50%;
+  background-color: black;
+  display: block;
+  margin: 0px auto;
+  position: relative;
 }
 
 .cards.black-bg .cards-dark-theme li img {
@@ -180,5 +187,9 @@
 .cards.black-bg .cards-dark-theme li .cards-card-image picture {
   display: block;
   width: 34px;
-  height: 34px
+  height: 34px;
+  position: absolute;
+  top: 31%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
